fix overflow-y bug, by setting a max-height

--- a/src/renderer/scss/_search.scss
+++ b/src/renderer/scss/_search.scss
@@ -27,7 +27,7 @@
             
             width: 100%;
             overflow-y: auto;
-            
+            max-height: 600px;
             li {
                 padding: 10px;
                 margin-top: 20px;
